--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="https://sant11h.github.io/downloads/shockstats.zip">Sock!Stats</a>
+<a href="https://sant11h.github.io/downloads/shockstats.zip">Shock!Stats</a>
