--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="https://sant11h.github.io/downloads/shockstats.zip">Shock!Stats</a>
+<a href="https://sant11h.github.io/downloads/shockstats.zip"><font size="6">Shock!Stats</font></a>
