--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <a href="https://sant11h.github.io/downloads/shockstats.zip"><font size="6">Shock!Stats</font></a>
+<a href="https://sant11h.github.io/openweather/weather.html"><font size="6">OpenWeather</font></a>
